--- a/C2_RazorPage/C2_RazorPage.csproj
+++ b/C2_RazorPage/C2_RazorPage.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="NewFolder\" />
+  </ItemGroup>
+
 </Project>
